--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <!-- Section 3 -->
             <div class="feature-block">
-                <h3>Understand your inquiry service</h3>
+                <h3>Understand your workflow better</h3>
                 <img src="/images/analytics-dashboard.png" alt="Line analytics showing funnel, volume, and time data" class="feature-img" />
                 <p>Track inquiry volume, response time, and sales funnel performance in one place. Line gives your team insights to close faster and optimize event sales operations.</p>
             </div>
