Trigger deploy to test CloudFront invalidation

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                 <p>Track inquiry volume, response time, and sales funnel performance in one place. Line gives your team insights to close faster and optimize event sales operations.</p>
             </div>
         </section>
-        <!-- CTA Section -->
+        
+        <!-- CTA Section and testing -->
         <section id="contact" class="cta-section">
             <div class="cta-inner">
                 <h2>Interested in serving customers smarter with AI?</h2>
