update fix on mobile

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <section class="hero">
             <h1>Your AI assistant for catering and event sales</h1>
             <p class="subtext"><strong>For your customers:</strong> instant, professional responses.<br><strong>For your business:</strong> faster bookings, less manual work.</p>
+            <a href="https://cal.com/kyle-mann/with-line-demo" class="mobile-demo-link" target="_blank">Schedule a demo →</a>
         </section>
     </div>
     <main>
