--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
     <div class="header-bg-container">
         <div class="overlay"></div>
         <section class="hero">
-            <h1>Your AI assistant for catering and event sales</h1>
-            <p class="subtext"><strong>For your customers:</strong> instant, professional responses.<br><strong>For your business:</strong> faster bookings, less manual work.</p>
+            <h1>Your assistant for event, catering, and rental sales</h1>
+            <!-- <h2>Serve your team and customers, with Line</h2> -->
+            <p class="subtext">For your customers: instant, professional responses.<br>For your team: faster bookings, less manual work.</p>
             <a href="https://cal.com/kyle-mann/with-line-demo" class="mobile-demo-link" target="_blank">Schedule a demo →</a>
         </section>
     </div>
@@ -75,19 +76,19 @@
             <!-- Section 1 -->
             <div class="feature-block">
                 <h3>Help your customers instantly 24/7</h3>
-                <img src="/images/ai_sales-ezgif.com-speed.gif" alt="AI assistant helping customer inquiry" class="feature-img" />
+                <img src="images/ai_sales-ezgif.com-speed.gif" alt="AI assistant helping customer inquiry" class="feature-img" />
                 <p>Line's AI assistant responds instantly to event inquiries, asking qualifying questions and offering property and package details, helping guests feel taken care of while saving your team hours.</p>
             </div>
             <!-- Section 2 -->
             <div class="feature-block">
                 <h3>Save time with AI-powered sales</h3>
-                <img src="/images/manager_gif-ezgif.com-speed.gif" alt="Event manager dashboard with proposal generator" class="feature-img" />
+                <img src="images/manager_gif-ezgif.com-speed.gif" alt="Event manager dashboard with proposal generator" class="feature-img" />
                 <p>Managers receive summarized inquiry details and use AI to generate proposals, timelines, and follow-ups, speeding up the sales process and improving quality.</p>
             </div>
             <!-- Section 3 -->
             <div class="feature-block">
                 <h3>Understand your workflow better</h3>
-                <img src="/images/analytics-dashboard.png" alt="Line analytics showing funnel, volume, and time data" class="feature-img" />
+                <img src="images/analytics-dashboard.png" alt="Line analytics showing funnel, volume, and time data" class="feature-img" />
                 <p>Track inquiry volume, response time, and sales funnel performance in one place. Line gives your team insights to close faster and optimize event sales operations.</p>
             </div>
         </section>
