installed http-server for development

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- CTA Section and testing -->
         <section id="contact" class="cta-section">
             <div class="cta-inner">
-                <h2>Interested in serving customers smarter with AI?</h2>
+                <h2>Ready to serve your team and guests, with Line?</h2>
                 <p class="cta-subtext">Sign up and we'll notify you with early access.</p>
                 <div id="form-container">
                     <form id="email-form" action="https://formspree.io/f/mwpolggp" method="POST">
