updated header text and spacing

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
     <div class="header-bg-container">
         <div class="overlay"></div>
         <section class="hero">
-            <h1>Your assistant for event, catering, and rental sales</h1>
-            <!-- <h2>Serve your team and customers, with Line</h2> -->
+            <h1>Stop losing bookings.<br>Start converting more inquiries.</h1>
             <p class="subtext">For your customers: instant, professional responses.<br>For your team: faster bookings, less manual work.</p>
             <a href="https://cal.com/kyle-mann/with-line-demo" class="mobile-demo-link" target="_blank">Schedule a demo →</a>
         </section>
