added new 'Let Line handle the busywork' section with proposal GIF

--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
                 <img src="images/manager_gif-ezgif.com-speed.gif" alt="Event manager dashboard with proposal generator" class="feature-img" />
                 <p>Managers receive summarized inquiry details and use AI to generate proposals, timelines, and follow-ups, speeding up the sales process and improving quality.</p>
             </div>
+            <!-- NEW Section -->
+            <div class="feature-block">
+                <h3>Let Line handle the busywork</h3>
+                <img src="images/proposal-ezgif.com-speed.gif" alt="Line handling event sales tasks" class="feature-img" />
+                <p>Line doesn't just answer questions, it gets things done. It checks availability, drafts custom proposals, generates contracts, and responds to customer questions using your real property specs, pricing, and amenity options. All tailored to the specific event and ready to send instantly.</p>
+            </div>
             <!-- Section 3 -->
             <div class="feature-block">
                 <h3>Understand your workflow better</h3>
