--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- Section 1 -->
             <div class="feature-block">
                 <h3>Help your customers instantly 24/7</h3>
-                <img src="images/ai_sales-ezgif.com-speed_1.gif" alt="AI assistant helping customer inquiry" class="feature-img" />
+                <img src="images/inquiry_wedding-ezgif.com-speed_2.gif" alt="AI assistant helping customer inquiry" class="feature-img" />
                 <p>Line's AI assistant responds instantly to event inquiries, asking qualifying questions and sharing photos and videos specific to each request. It offers property and package details, helping guests feel taken care of while saving your team hours.</p>
             </div>
             <!-- Section 2 -->
