Update blog title to 'Guest Experience Starts at Check-in the First Click'

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </button>
                 </article>
                 <article class="blog-card" data-post="2">
-                    <h3>Why Hospitality Starts at <del>Check-in</del> the First Click</h3>
+                    <h3>Guest Experience Starts at <del>Check-in</del> the First Click</h3>
                     <p class="blog-description">Today's customers expect immediacy, clarity, and personalization from the start.</p>
                     <div class="blog-author">
                         <img src="images/avatar.jpeg" alt="Kyle Mann" class="author-avatar">
@@ -225,12 +225,12 @@
                 
                 <p>– Kyle</p>
                 <div class="next-post">
-                    <a href="#" class="next-post-link" data-next="2">Read next: Why Hospitality Starts at <del>Check-in</del> the First Click →</a>
+                    <a href="#" class="next-post-link" data-next="2">Read next: The Guest Experience Starts at <del>Check-in</del> the First Click →</a>
                 </div>
             </div>
             
             <div class="blog-content" data-post="2">
-                <h1>Why Hospitality Starts at <del>Check-in</del> the First Click</h1>
+                <h1>Guest Experience Starts at <del>Check-in</del> the First Click</h1>
                 <div class="blog-content-author">
                     <img src="images/avatar.jpeg" alt="Kyle Mann">
                     <span>Kyle Mann | May 19th 2025</span>
