Update blog content and formatting

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 </div>
                 <p>If you're in the hospitality business - whether you're running a boutique hotel, a wedding venue, a rental company, or an event space - you already know how important it is to deliver exceptional service once a guest arrives. Beautiful spaces, warm greetings, and attention to detail are table stakes.</p>
 
-                <p>But here's the truth: for your guests, the experience doesn't begin at check-in. It begins with the first click. Look around the industry and it's clear - that same warm, high-touch hospitality that defines your property often disappears online. Instead, guests are met with outdated websites, confusing layouts, and a generic form at the end of a long scroll.</p>
+                <p>But the thing is: for your guests, the experience doesn't begin at check-in. It begins with the first click. Look around the industry and it's clear - that same warm, high-touch hospitality that defines your property often disappears online. Instead, guests are met with outdated websites, confusing layouts, and a generic form at the end of a long scroll.</p>
 
                 <p>What should be an exciting moment - envisioning and planning an event - turns into frustration. You click around, hoping for inspiration or clarity, and instead land here:</p>
 
