Update hero section: new heading text, adjusted font sizes and max-widths for better responsiveness

--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
     <div class="header-bg-container">
         <div class="overlay"></div>
         <section class="hero">
-            <h1>Guest experience starts <del>at check-in</del> on the first click</h1>
-            <p class="subtext">For your customers: instant, professional responses.<br>For your team: faster bookings, less manual work.</p>
+            <h1>Don’t keep guests waiting and your team buried in busywork.</h1>
+            <div class="hero-subtext">
+                <p><strong>An online sales agent for your guests and an assistant for your team.</strong></p>
+                <p>Instant, professional responses for your customers.</p>
+                <p>Faster bookings, less manual work for your team.</p>
+            </div>
             <a href="https://cal.com/kyle-mann/with-line-demo" class="mobile-demo-link" target="_blank">Schedule a demo →</a>
         </section>
     </div>
@@ -78,7 +82,7 @@
             <div class="feature-block">
                 <h3>Help your customers instantly 24/7</h3>
                 <img src="images/inquiry_wedding-ezgif.com-speed_2.gif" alt="AI assistant helping customer inquiry" class="feature-img" />
-                <p>Line's AI assistant responds instantly to event inquiries, asking qualifying questions and sharing photos and videos specific to each request. It offers property and package details, helping guests feel taken care of while saving your team hours.</p>
+                <p>Line replaces your contact form with a smart assistant that helps guests plan and visualize their event: instantly answering questions, sharing images, and qualifying leads for your team.</p>
             </div>
             <!-- Section 2 -->
             <div class="feature-block">
