Update hero section: new heading text, adjusted font sizes and widths for better layout

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <div class="header-bg-container">
         <div class="overlay"></div>
         <section class="hero">
-            <h1>Don’t keep guests waiting and your team buried in busywork.</h1>
+            <h1>Guest experience starts at the first click.</h1>
             <div class="hero-subtext">
-                <p><strong>An online sales agent for your guests and an assistant for your team.</strong></p>
+                <p><strong>For event, rental, and group sales: a sales agent for guests and an assistant for your team.</strong></p>
                 <p>Instant, professional responses for your customers.</p>
                 <p>Faster bookings, less manual work for your team.</p>
             </div>
