Fix capitalization in blog post list items

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
                     <ul>
                         <li><strong>Real-Time Communication:</strong> No more waiting hours or days for replies. Line's instant messaging ensures you get the answers you need when you need them.</li>
-                        <li><strong>Streamlined communication:</strong> reducing the risk of miscommunication and mistakes.</li>
+                        <li><strong>Streamlined Communication:</strong> Reducing the risk of miscommunication and mistakes.</li>
                         <li><strong>Enhanced Staff Presence:</strong> With less time spent on pre-event logistics, sales associates and venue staff can focus on delivering an exceptional experience during the event itself.</li>
                     </ul>
 
