--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Line - AI Sales, Catering, and Event Assistant</title>
+    <meta property="og:title" content="Line – AI Assistant for Event and Catering Pros" />
+    <meta property="og:description" content="Line helps hospitality teams respond faster, plan events more easily, and reclaim time for what really matters." />
+    <meta property="og:image" content="https://withline.io/images/line-logo.png" />
+    <meta property="og:url" content="https://withline.io" />
+    <meta property="og:type" content="website" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
