--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Line - AI Sales, Catering, and Event Assistant</title>
-    <meta property="og:title" content="Line – AI Assistant for Event and Catering Pros" />
+    <meta property="og:title" content="AI Assistant for Event, Rental, and Group Sales Teams" />
     <meta property="og:description" content="Line helps hospitality teams respond faster, plan events more easily, and reclaim time for what really matters." />
     <meta property="og:image" content="https://withline.io/images/line-logo.png" />
     <meta property="og:url" content="https://withline.io" />
