--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 </svg>
             </a>
             <div class="nav-links">
-                <a href="#how-we-help" class="nav-link active">How we help</a>
+                <a href="#how-we-help" class="nav-link">How we help</a>
                 <a href="#blog" class="nav-link">Blog</a>
-                <a href="https://cal.com/kyle-mann/with-line-demo" class="nav-link" target="_blank">Schedule demo</a>
+                <a href="https://cal.com/kyle-mann/with-line-demo" class="nav-link schedule-demo-nav" target="_blank">Schedule a demo</a>
                 <a href="#contact" class="cta-button">Get early access</a>
             </div>
         </div>
@@ -75,31 +75,44 @@
             <h1>Guest experience starts at the first click.</h1>
             <div class="hero-subtext">
                 <p><strong>For event, rental, and group sales: a sales agent for guests and an assistant for your team.</strong></p>
+                <a href="https://cal.com/kyle-mann/with-line-demo" class="hero-demo-button" target="_blank">How can we help? Let's talk 👋</a>
                 <p>Instant, professional responses for your customers.</p>
                 <p>Faster bookings, less manual work for your team.</p>
             </div>
-            <a href="https://cal.com/kyle-mann/with-line-demo" class="mobile-demo-link" target="_blank">Schedule a demo →</a>
         </section>
     </div>
     <main>
         <section id="how-we-help" class="features-stacked">
             <!-- Section 1 -->
             <div class="feature-block">
-                <h3>Help your customers instantly 24/7</h3>
-                <img src="images/inquiry_wedding-ezgif.com-speed_2.gif" alt="AI assistant helping customer inquiry" class="feature-img" />
-                <p>Line replaces your contact form with a smart assistant that helps guests plan and visualize their event: instantly answering questions, sharing images, and qualifying leads for your team.</p>
+                <div class="feature-content">
+                    <h3>Help your customers instantly 24/7</h3>
+                    <p>Line replaces your contact form with a smart sales agent that helps guests plan and visualize their event: instantly answering questions, sharing images, and qualifying leads for your team. Train your agent in minutes!</p>
+                </div>
+                <div class="feature-image">
+                    <img src="images/inquiry_wedding-ezgif.com-speed_2.gif" alt="AI assistant helping customer inquiry" class="feature-img" />
+                </div>
             </div>
             <!-- Section 2 -->
             <div class="feature-block">
-                <h3>Save time with AI-powered sales</h3>
-                <img src="images/manager_gif-ezgif.com-speed.gif" alt="Event manager dashboard with proposal generator" class="feature-img" />
-                <p>Managers receive summarized inquiry details and use AI to generate proposals, timelines, and follow-ups, speeding up the sales process and improving quality.</p>
+                <div class="feature-content">
+                    <h3>Save time with AI-powered sales</h3>
+                    <p>Managers receive summarized inquiry details and use AI to generate proposals, timelines, and follow-ups, speeding up the sales process and improving quality.</p>
+                    <a href="https://cal.com/kyle-mann/with-line-demo" class="feature-demo-button" target="_blank">Want a closer look? Book a demo 🔍</a>
+                </div>
+                <div class="feature-image">
+                    <img src="images/manager_gif-ezgif.com-speed.gif" alt="Event manager dashboard with proposal generator" class="feature-img" />
+                </div>
             </div>
-            <!-- NEW Section -->
+            <!-- Section 3 -->
             <div class="feature-block">
-                <h3>Let Line handle the busywork</h3>
-                <img src="images/proposal-ezgif.com-speed.gif" alt="Line handling event sales tasks" class="feature-img" />
-                <p>Line doesn't just answer questions, it gets things done. It checks availability, drafts custom proposals, generates contracts, and responds to customer questions using your real property specs, pricing, and amenity options. All tailored to the specific event and ready to send instantly.</p>
+                <div class="feature-content">
+                    <h3>Let Line handle the busywork</h3>
+                    <p>Line doesn't just answer questions, it gets things done. It checks availability, drafts custom proposals, generates contracts, and responds to customer questions using your real property specs, pricing, and amenity options. All tailored to the specific event and ready to send instantly.</p>
+                </div>
+                <div class="feature-image">
+                    <img src="images/proposal-ezgif.com-speed.gif" alt="Line handling event sales tasks" class="feature-img" />
+                </div>
             </div>
         </section>
         
@@ -468,7 +481,7 @@
         <section id="contact" class="cta-section">
             <div class="cta-inner">
                 <h2>Ready to serve your team and guests, with Line?</h2>
-                <p class="cta-subtext">Sign up and we'll notify you with early access.</p>
+                <p class="cta-subtext">Sign up and we'll notify you with early access. Questions? Email us at <a href="mailto:kyle@withline.io">kyle@withline.io</a></p>
                 <div id="form-container">
                     <form id="email-form" action="https://formspree.io/f/mwpolggp" method="POST">
                         <input type="email" name="email" placeholder="Enter your email" required />
