Add responsive mobile changes: CTA button changes to 'Schedule demo' on mobile, hide 'How can we help' button on mobile, fix blog bullet point indentation

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <a href="#how-we-help" class="nav-link">How we help</a>
                 <a href="#blog" class="nav-link">Blog</a>
                 <a href="https://cal.com/kyle-mann/with-line-demo" class="nav-link schedule-demo-nav" target="_blank">Schedule a demo</a>
-                <a href="#contact" class="cta-button">Get early access</a>
+                <a href="#contact" class="cta-button" data-mobile-href="https://cal.com/kyle-mann/with-line-demo" data-mobile-text="Schedule demo">Get early access</a>
             </div>
         </div>
     </nav>
@@ -75,7 +75,7 @@
             <h1>Guest experience starts at the first click.</h1>
             <div class="hero-subtext">
                 <p><strong>For event, rental, and group sales: a sales agent for guests and an assistant for your team.</strong></p>
-                <a href="https://cal.com/kyle-mann/with-line-demo" class="hero-demo-button" target="_blank">How can we help? Let's talk 👋</a>
+                <a href="https://cal.com/kyle-mann/with-line-demo" class="hero-demo-button mobile-hidden" target="_blank">How can we help? Let's talk 👋</a>
                 <p>Instant, professional responses for your customers.</p>
                 <p>Faster bookings, less manual work for your team.</p>
             </div>
