Update title and all Cal.com links to /line for demo and CTA buttons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Line - AI Sales, Catering, and Event Assistant</title>
+    <title>Line – AI event, rentals, and group sales assistant</title>
     <meta property="og:title" content="AI Assistant for Event, Rental, and Group Sales Teams" />
     <meta property="og:description" content="Line helps hospitality teams respond faster, plan events more easily, and reclaim time for what really matters." />
     <meta property="og:image" content="https://withline.io/images/line-logo.png" />
@@ -64,8 +64,8 @@
             <div class="nav-links">
                 <a href="#how-we-help" class="nav-link">How we help</a>
                 <a href="#blog" class="nav-link">Blog</a>
-                <a href="https://cal.com/kyle-mann/with-line-demo" class="nav-link schedule-demo-nav" target="_blank">Schedule a demo</a>
-                <a href="#contact" class="cta-button" data-mobile-href="https://cal.com/kyle-mann/with-line-demo" data-mobile-text="Schedule demo">Get early access</a>
+                <a href="https://cal.com/kyle-mann/line" class="nav-link schedule-demo-nav" target="_blank">Schedule a demo</a>
+                <a href="#contact" class="cta-button" data-mobile-href="https://cal.com/kyle-mann/line" data-mobile-text="Schedule demo">Get early access</a>
             </div>
         </div>
     </nav>
@@ -75,7 +75,7 @@
             <h1>Guest experience starts at the first click.</h1>
             <div class="hero-subtext">
                 <p><strong>For event, rental, and group sales: a sales agent for guests and an assistant for your team.</strong></p>
-                <a href="https://cal.com/kyle-mann/with-line-demo" class="hero-demo-button mobile-hidden" target="_blank">How can we help? Let's talk 👋</a>
+                <a href="https://cal.com/kyle-mann/line" class="hero-demo-button mobile-hidden" target="_blank">How can we help? Let's talk 👋</a>
                 <p>Instant, professional responses for your customers.</p>
                 <p>Faster bookings, less manual work for your team.</p>
             </div>
@@ -98,7 +98,7 @@
                 <div class="feature-content">
                     <h3>Save time with AI-powered sales</h3>
                     <p>Managers receive summarized inquiry details and use AI to generate proposals, timelines, and follow-ups, speeding up the sales process and improving quality.</p>
-                    <a href="https://cal.com/kyle-mann/with-line-demo" class="feature-demo-button" target="_blank">Want a closer look? Book a demo 🔍</a>
+                    <a href="https://cal.com/kyle-mann/line" class="feature-demo-button" target="_blank">Want a closer look? Book a demo 🔍</a>
                 </div>
                 <div class="feature-image">
                     <img src="images/manager_gif-ezgif.com-speed.gif" alt="Event manager dashboard with proposal generator" class="feature-img" />
